force-app/main/default/objects/SA_Weekly_Sales_Target_Product__mdt/SA_Weekly_Sales_Target_Product__mdt.object-meta.xml
<CustomObject>
    <description>南非周目标动态生成模板产品</description>
    <label>SA Weekly Sales Target Product</label>
    <pluralLabel>SA Weekly Sales Target Product</pluralLabel>
</CustomObject>