force-app/main/default/objects/SA_Weekly_Sales_Target_Product__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Makro</fullName>
                <default>true</default>
                <label>Makro</label>
            </value>
            <value>
                <fullName>Game</fullName>
            </value>
            <value>
                <fullName>Hirsch</fullName>
            </value>
            <value>
                <fullName>HFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>