force-app/main/default/objects/SA_Weekly_Sales_Target_Product__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>